--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     compile group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.2.RELEASE'
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.6.0'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
-
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
 }
 
 jacocoTestReport {
