--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.6.0'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
+
 }
 
 jacocoTestReport {
