--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 file.upload-dir=./uploads
 
+app.schedule.threadPrefix=scheduled-task-pool-
+app.schedule.poolSize=10
+app.refreshRate=16
+
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 
 spring.datasource.url=jdbc:mysql://localhost:3306/vision-project
