--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile('javax.xml.bind:jaxb-api:2.3.0')
     compile('javax.activation:activation:1.1')
     compile('org.glassfish.jaxb:jaxb-runtime:2.3.0')
+    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.2'
 
     compile group: 'org.hsqldb', name: 'hsqldb', version: '2.4.1'
     compile group: 'com.h2database', name: 'h2', version: '1.4.192'
