--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database=mysql
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 security.ignored=true
 security.basic.enabled=false
