cros config added in SecurityConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ app.refreshRate=16
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 
+server.port = 8095
+
 spring.datasource.url=jdbc:mysql://localhost:3306/vision-project
 spring.datasource.username=root
 spring.datasource.password=1234
