--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,19 +10,8 @@ app.refreshRate=16
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 
+spring.profiles.active=production
 server.port = 8095
-
-spring.datasource.url=jdbc:mysql://localhost:3306/vision-project
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database=mysql
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-
-security.ignored=true
-security.basic.enabled=false
 
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
