--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.2.RELEASE'
     implementation group: 'org.springframework', name: 'spring-messaging'
     implementation group: 'org.springframework', name: 'spring-websocket'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
