Gradle wrapper update + jacoco added

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,28 @@
 .gradle
-out/
-.idea/
-classes/
+/build/
+out
+classes
+build
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+/out/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
