--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,34 @@ plugins {
     id 'org.springframework.boot' version '2.5.0'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
+    id 'jacoco'
 }
 
 group = 'com.vision'
 version = '1.0-SNAPSHOT'
-sourceCompatibility = 11
-targetCompatibility = 11
+java {
+    sourceCompatibility = 16
+    targetCompatibility = 16
+}
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
 }
+
 repositories {
     mavenCentral()
+}
+
+jacoco {
+    toolVersion = "0.8.7"
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+    }
 }
 
 dependencies {
