--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.5.0'
+    id 'org.springframework.boot' version '2.5.4'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
     id 'jacoco'
@@ -7,6 +7,7 @@ plugins {
 
 group = 'com.vision'
 version = '1.0-SNAPSHOT'
+
 java {
     sourceCompatibility = 16
     targetCompatibility = 16
@@ -38,10 +39,9 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.2.RELEASE'
+    implementation group: 'mysql', name: 'mysql-connector-java'
     implementation group: 'org.springframework', name: 'spring-messaging'
     implementation group: 'org.springframework', name: 'spring-websocket'
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
-    implementation group: 'org.springframework.security', name: 'spring-security-jwt'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.6.0'
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
     implementation group: 'log4j', name: 'log4j', version: '1.2.17'
@@ -50,10 +50,11 @@ dependencies {
     implementation ('javax.xml.bind:jaxb-api:2.3.1')
     implementation ('javax.activation:activation:1.1.1')
     implementation ('org.glassfish.jaxb:jaxb-runtime:3.0.1')
-    implementation  group: 'mysql', name: 'mysql-connector-java'
     implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.4.1'
     implementation group: 'com.h2database', name: 'h2', version: '1.4.192'
+    implementation group: 'org.springframework', name: 'spring-context'
     implementation group: 'org.apache.derby', name: 'derby', version: '10.14.2.0'
+    implementation group: 'org.javassist', name: 'javassist', version: '3.28.0-GA'
 
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
