--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.2.RELEASE'
     implementation group: 'mysql', name: 'mysql-connector-java'
     implementation group: 'org.springframework', name: 'spring-messaging'
